fixes image width overflow on docs page

--- a/sass/_valkey.scss
+++ b/sass/_valkey.scss
@@ -248,6 +248,11 @@ p {
   align-content: stretch;
   height: 100%;
   margin: 0 auto;
+
+  .container.right-aside img {
+    width: 100%;
+    height: auto;
+  }
 }
 
 .page-title {
